--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "lodash": "^4.17.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.12"
+    "react-scripts": "1.0.12",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
